@@ -20,6 +20,7 @@ DIST gitlab-ce-8.16.5.tar.gz 20900898 SHA256 74a73992d18d97b426ea36ca2c975f4d1d4
 DIST gitlab-ce-8.16.6.tar.gz 20901900 SHA256 5b88dd855afc44da2b8f059056321fc0dd4cb7c2a97811c6c3ec65c3b44e1d8d SHA512 b6fdf4e8df787ea5812c9c6baf29cf86fcc440be7f1c8fd31410ccc93459208999f25956d8561d3a789ff75c6e112e396db79cd0fa3d959dd8b1b382ccb5d7b4 WHIRLPOOL 17b2203a1d1b36f814df781aaee1faafcf336794fa7c1792868685cb6ab4e7e7eb1de916b34fb28ba72be38d760187de48b8ac2b36bf4b722bf799f60e6b1c96
 DIST gitlab-ce-8.17.0.tar.gz 22991847 SHA256 3883c2e505e511f83072f950b9d211783148b97e29f34144e57c8b180d7f4518 SHA512 e0ee1b1ab21a6ad262cccbb2abf544ccb18dafcaf61e83aa02bac0182bdd35a47a725741382876f3bb79f6f42764c59b7a992c16a916a1673a716417b34d8a87 WHIRLPOOL fe3c36e41d0fe3c3420a3e52dc61fc30f424d2832cd82587a6e50b6c6450ee9e99bb2897f87cc949b4663055a35e159cf7b6f471b6aa9046c6bb8b1fae526ab7
 DIST gitlab-ce-8.17.0_rc3.tar.gz 23031572 SHA256 13ac75ce0737e9e9f46fea59828a0a71f3ad9fc4436859bc68938d4719190ba9 SHA512 c5998f7aeefd65ea46ee6357f15bc6e60253742f6007252bf9a1543f29f8973951f8d0f8d60dba87b08dbf5256427e9bf28198274a9dadb92b30b7f5adc76cd1 WHIRLPOOL 86380fedcacbd18f13b12f4792b506421726c4226512471eeeda8d085abc89e6b43f54b0301e0cbdb1f3afe6dade84452690576435220c0afc559bcd5f341df3
+DIST gitlab-ce-8.17.2.tar.gz 22995277 SHA256 6819b8e289b7c23ee1880d935f443bb63896e45f62e2d203dfd87f9b8f90d3ae SHA512 b66b3ee0233641aee27d6cd1748069df8b7a705414f7e5b41875d861f425382f4a7f31639219660db1811fdd0e0655526f7760fb49b4847efb486b37ced11205 WHIRLPOOL ab8c986a08c5cf86b5d4a3a56059827b6c1e561c7c76e72ba3433c589bd3514177019db587eee68aadc1ac0ed8b748e813ccdc2fea3fae9b773979e7829562d0
 EBUILD gitlab-ce-8.15.4.ebuild 11982 SHA256 db794f18bc0d023a8b6adf49b82c2e37fd38b7206b064a7700289c0cfa16961c SHA512 ca30780d28ffc0242ac5f6ccad178cc44464a81f2d44cb13e53ddf06700d0f39b9fee9b77e356735435079b34090049d50d9019af71e92d6d8faaf3767a39dc5 WHIRLPOOL 42ee8b8e5a2c6fba69ecdbf6e306a87f369fa193f721c73481edc744953bfd210cb4495bc603ba01566efb2b0869ec71284a1f1b1c34d1a124bd08546829ca37
 EBUILD gitlab-ce-8.15.7.ebuild 11982 SHA256 fab225a8a8a9373898b5c604ce41ed65c4648c46131798315df833326b006fb7 SHA512 ea17dc9927336aed09ba21e0e1c9c4df2998f941a05ff30e9ef9951b5318bcdfb1d332fa8d285a27f26356a9fa9a5f72da45882ab8edbfa6046ec96764dae47f WHIRLPOOL d51629d3c67f8be2636a2e5cb4bb4d4a7b0402394f47aaa01fc182c29f1d3ee916a2d5bb8086bbe871f41294e348ec024d81a775ba9c30028d8b97d93d637620
 EBUILD gitlab-ce-8.16.4.ebuild 11982 SHA256 91875777d0953bffddd31318d9c5d4666ba59bd3446804d063c1199c603bd5a6 SHA512 7112bf185f25d90a11ee2a6e9d197c1ce781b49c486cc1afaff002ad66dcec7c9b43c3b9b6c26c62d23bb7e8c0fdd4c527e53a99f9674bb4af1e404454960227 WHIRLPOOL 76bd66e8b7d4ff04f02354cb6cdf3fa0b92ccf2cdcad26cf117f12330b3f3588713fd0d0465da2515750348975eb81daa6e02f984025804b7db50da99f4e8e5e
@@ -27,6 +28,7 @@ EBUILD gitlab-ce-8.16.5.ebuild 11982 SHA256 fd2648d0a2df06b5aa46435061f6d12b1d0d
 EBUILD gitlab-ce-8.16.6.ebuild 11982 SHA256 2cc7b8f06153f28ebcc34a5ff8e24be791689c41fc8a780149cdaeb61ffc70d3 SHA512 f9d43d16cac2edbcbc3d144133265b94bbb7dac8ed5266a7ba641cfa6f154eb62462ffff8a37b977559ca892eb20c968eb6f82c2aafbd20ce293f6a6bd7b7e29 WHIRLPOOL 5682849083932171dff509c2142e225992e2724b09987da47bab258fdf45eebaf615cb07739709da2c421eed6fc66f705d6ce35a8d956130598168908ee2f061
 EBUILD gitlab-ce-8.17.0.ebuild 12831 SHA256 9556fe5712044ebe473b7ff8b847a4daa5ca1818a0ac714f22afc5725199da72 SHA512 4aaa00f4eac87a4bbe598cde792997e25b137eea9fdaf7e7c8394ec5e2abc54302ed5432efe1c7055dc195ca2599f9027463480c943f108bb399daa2eee833f5 WHIRLPOOL aec29db1dc7236f60d2723ec97444fa437a4f8b3092cbf53305f3cddbb6851a40b1a77a306daf4c9780ffe9a8eed760c580371bf95da66b18d884a32c3e48cd5
 EBUILD gitlab-ce-8.17.0_rc3.ebuild 12258 SHA256 179da162a7ff3ab1fc9f3173aff30c59a73005622ccb0fe8ada57f950c9d0dd7 SHA512 b5f244a7a7ac980b1e1c1595b88613cf6f3649591a9430dac0db3a174432648b05707b0e3e79450f5882fb7044aca6bb3778a19566ad6c83c5fd30ee8c09893e WHIRLPOOL 49cfbbfedfcafecfa8a775bf0e3a8a9daa2fcce3a819ce92ab07ccaaa4b3881221cce5ebf4ec9333b9ed7a884717d037336dc644d359137e06fe5df3f51e9aaa
+EBUILD gitlab-ce-8.17.2.ebuild 12831 SHA256 b57a4f683a5eafaa5d0149b0256833e329a757ad470e24bba163c57ba841eeeb SHA512 ed84da9ab62d0893b36a2ade744248b663634c5b05b8e8b608d064068c31a3d19a0e4917f932a0a2caee48a8f509359e50cc982c43bd5d1d958343ea5c5637d9 WHIRLPOOL dfb96d29b45adf5d03313fd9dd6cbc39c70a1736272867737f0bf8d429510add4e3fcd77b329690b9393cc506c9387f4342bed001c2bda50901ba9480fe241d5
 EBUILD gitlab-ce-9999.ebuild 12766 SHA256 d6b55d9812c53897bcf8cf37ee53796e82eea3436521a3b49fa9de5b5d65997b SHA512 3291fe592b3c77b9b475e96fae36a32e17a74b883be7c7a46cb07981556c9a914201426d4a5f2602d35acdf375a9400be0af1d4b99ae3da30423f8b85054e9ab WHIRLPOOL 2329daae3eaa008a7e58e780e677647319e6945f0199c32655f0d86958bbb3cae5f32b09238afd784087a187e69f7b13c8d9e07edc127b8ea62e202946de6371
-MISC ChangeLog 14075 SHA256 bb183ca12c8db890a63592b489eab1f0cf18cedce37a7c710448ade99beb09c6 SHA512 00172c73021f20d32f4204332cb68b52bc707ce385c52a1d6a05bb5e23a3aa7ef75b3471d4b362622c1f3698a355c1f4d1ccde3c73e29433023e3cc50012f31f WHIRLPOOL 1078f3a5a71591f641a855d81d0d9475ac27c08cd3cd1e989d7a91e332eb5de7225bacce6e42f7edca8ec2594c1199a78941b5f25205468e2d27e40184bc51f4
+MISC ChangeLog 14384 SHA256 0808e6c73143f5c48273b21f09172c4a80e39d21ff8b39f4f4fcd6634e2b3069 SHA512 6276f6515aac9f8d060b842a2100cbe50138045a31d66d7118f8ba003c6c056b09cad7ef5643299ca0fcaf2cb3d654ae39aa3b3fe91e841032417e519d4fe9e1 WHIRLPOOL c47d579e1b0f7c0a478f7f05d3387c8c954684f2789501511fbfad06e6e3a0e35187934c7ba6ee092d8a73bbc90cce6c5d212e161cbad666b0920d07596efcdf
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
